Run Eclipse cleanup across tests